test/parsing/vass/newline-in-string-compiletime-1.good
newline-in-string-compiletime-1.chpl:2: warning: I'd like
 a multi-line string in
 my compiler message.  
Preferably, with 'single' and "double" quotes.
newline-in-string-compiletime-1.chpl:7: error: I'd like
 a multi-line string in
 my compiler message.  
Preferably, with 'single' and "double" quotes.
