test/parsing/vass/newline-in-string-compiletime-1.chpl

compilerWarning("I'd like\
 a multi-line string in\
 my compiler message.  \
Preferably, with \'single\' and \"double\" quotes.");

compilerError("I'd like\
 a multi-line string in\
 my compiler message.  \
Preferably, with \'single\' and \"double\" quotes.");
